tests/paczka1/small_fuzzy/21908997.err
Error in line 1: f3s A140 75,2
Error in line 6: ZTgyKNsB2BI A557 38,6
Error in line 7: ZTgyKNsB2BI A911 82,9
Error in line 9: Z0axo A557 91,3
